# forge-sentinel

./: Cargo.toml  README.md
detectors/: github_workflow_hunt.py
docs/: roadmap.md
src/: cli.rs  detection_model.rs  github_actions.rs  github_workflows.rs  main.rs  npm_packages.rs  presets.rs
