[package]
name = "forge-sentinel"
version = "0.1.0"
edition = "2024"
description = "Repository forensics and supply-chain detection for GitHub workflow compromise"

[workspace]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
